--- a/ALIVU13P/fpga_100g/fpga/Makefile
+++ b/ALIVU13P/fpga_100g/fpga/Makefile
@@ -146,7 +146,7 @@ XDC_FILES += ../../../common/syn/vivado/cmac_gty_ch_wrapper.tcl
 IP_TCL_FILES = ip/pcie4_uscale_plus_0.tcl
 IP_TCL_FILES += ip/cmac_usplus.tcl
 IP_TCL_FILES += ip/cmac_gty.tcl
-#IP_TCL_FILES += ip/ddr4_0.tcl
+IP_TCL_FILES += ip/ddr4_0.tcl
 
 # Configuration
 CONFIG_TCL_FILES = ./config.tcl
